# stonecharioteerbot

./: README.md  launch_stonecharioteer_bot.py  requirements.txt  setup.cfg  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
linux/: stonecharioteerbot.service
stonecharioteerbot/: __init__.py  stonecharioteer.py
stonecharioteerbot/plugins/: __init__.py  tempmon.py
