[metadata]
name = stonecharioteerbot
version = attr: src.VERSION
description = A plugin-supportive Telegram bot
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = python, telegram, chat, bot, plugins
license = MIT
classifiers = 
    Topic :: Communications :: Chat
    Topic :: Home Automation
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
author = Vinay Keerthi
author_email = ktvkvinaykeerthi@gmail.com
url = https://vinay87.github.io/stonecharioteerbot
